<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/headerMsg"
        android:textAlignment="center"
        android:textColor="@color/lightGreen"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/edtDescr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@color/creamWhite"
        android:ems="10"
        android:hint="@string/prodHint"
        android:inputType="textPersonName"
        android:textColor="@color/darkRed"
        android:textColorHint="@color/darkRed"
        app:layout_constraintBottom_toTopOf="@+id/edtPrices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnGoods" />

    <EditText
        android:id="@+id/edtPrices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="80dp"
        android:background="@color/creamWhite"
        android:ems="10"
        android:hint="@string/priceHint"
        android:inputType="numberDecimal"
        android:textColor="@color/darkRed"
        android:textColorHint="@color/darkRed"
        app:layout_constraintBottom_toTopOf="@+id/txtItemNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescr"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnCalculateCosts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/cost"
        app:layout_constraintBottom_toTopOf="@+id/txtOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddItems" />

    <Spinner
        android:id="@+id/spnGoods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/edtDescr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.406" />

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/btnQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="110dp"
        android:gravity="center"
        app:initialNumber="1"
        app:layout_constraintBottom_toTopOf="@+id/btnAddItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItemNumber" />

    <TextView
        android:id="@+id/txtItemNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="8dp"
        android:text="@string/quantity"
        android:textColor="@color/lightGreen"
        app:layout_constraintBottom_toTopOf="@+id/btnQty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrices" />

    <Button
        android:id="@+id/btnAddItems"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:text="@string/addItems"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculateCosts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/btnQty" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/headerMsg"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtHeader"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_destination" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/shelf"
        android:textColor="@color/lightGreen"
        app:layout_constraintBottom_toTopOf="@+id/spnGoods"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/creamWhite"
        android:hint="@string/output"
        android:scrollbars="vertical"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculateCosts" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txtOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnQty"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/rdNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkRed"
            android:checked="true"
            android:onClick="checkButton"
            android:text="@string/no" />

        <RadioButton
            android:id="@+id/rdYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightGreen"
            android:onClick="checkButton"
            android:text="@string/yes" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:layout_marginEnd="8dp"
        android:text="@string/importStatus"
        android:textColor="@color/lightGreen"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtItemNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddItems"
        app:layout_constraintEnd_toStartOf="@+id/btnAddItems"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQty"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_shopping_cart" />

</android.support.constraint.ConstraintLayout>